@@ -1,4 +1,6 @@
 Changes for 1.6.7
+
+ - [ZBX-596] fixed support of IPV6 under Windows 2000 (Sasha)
  - [ZBX-1027] fixed that item key must be used in each subexpression of trigger expression (Vedmak)
  - [ZBX-982] fixed message when can't delete application with web items (Vedmak)
  - [ZBX-861] fixed problem with disappearing nodes in frontend (Artem)
